# kcalcore

./: README  kcalcore.pro  kcalcoren.prf  libkcalcoren-qt5.pc  libkcalcoren.pc
kcalcore/: alarm.h  compat.cpp  config-kcalcore.h  icalformat.h  icaltimezones.cpp  icaltimezones.h  incidence.cpp  incidencebase.h  invitationhandlerif.h  kcalcore.pro  period.cpp  period.h  recurrencerule.cpp  recurrencerule.h  vcalformat.cpp
kcalcore/kdedate/: KSystemTimeZone  KSystemTimeZones  kcalendarsystemhebrew.cpp  kcalendarsystemhijri.cpp  kcalendarsystemjalali.cpp  kdatetime.cpp  ksystemtimezone.cpp  ktimezone.cpp
kcalcore/klibport/: KUrl  global.cpp  global.h  kcal_export.h.old  kcmdlineargs.h  kcodecs.cpp  kcodecs.h  kde_static.h  kdebug.h  kdecore_export.h  kdemacros.h  klocale.h  meego_port.cpp  meego_port.h  qtest_kde.h
kcalcore/klibport/kpimutils/: email.h  supertrait.h
kcalcore/tests/: CMakeLists.txt  incidencestest.cpp  readandwrite.cpp  tests.pro  testvcalexport.cpp
rpm/: kcalcore-qt5.spec  kcalcore-qt5.yaml  kcalcore.spec  kcalcore.yaml
